invoice service - added some test case